@@ -39,6 +39,7 @@ fi
 AC_CONFIG_FILES([Makefile
                  src/Makefile
 		 src/libnetwork/Makefile
+		 src/libgpukernel/Makefile
 		 src/libcachesystem/Makefile
                  src/libm2skernel/Makefile
 		 src/libdisasm/Makefile
